--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,16 @@
             active:bg-gray-400 
              text-gray-800 ;
     }
-}
 
+}
+.hide-scroll-bar {
+    
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scroll-bar::-webkit-scrollbar {
+    
+  display: none;
+}
 
 
